--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@ body {
   width: 100%;
   padding: 20px;
 }
-
+.footer {
+        padding: 20px;
+        text-align: center;
+        background: #ddd; 
+}
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
