--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="ThoTranResume.pdf">Resume</a>
+  <a href="ThoTranResume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
   <a href="#">Projects</a>
   <a href="#">Coursework</a>
   <a href="https://github.com/thotranexe" target="_blank" rel="noreferrer noopener">Github</a>
