--- a/socials.html
+++ b/socials.html
@@ -30,15 +30,10 @@
         font-size: 20px;
         text-decoration: none;
     }
-    .footer {
-        padding: 20px;
-        text-align: center;
-        background: #ddd; 
-    }
     .footer a{
         display: block;
-        color: black;
-        padding: 14px 20px;
+        color: rgb(37, 11, 235);
+        padding: 20px 20px;
         font-size: 40px;
         text-decoration: none;
     }
@@ -62,7 +57,7 @@
     <a href="#" style="text-decoration:none;">Discord<br></a>
 </div>
 <div class="footer">
-    <a href="index.html"> Homepage <a>
+    <a href="index.html"> Back to Homepage <a>
 </div>
 </body>
 </html>
