--- a/socials.html
+++ b/socials.html
@@ -30,6 +30,11 @@
         font-size: 20px;
         text-decoration: none;
     }
+    .footer {
+        padding: 20px;
+        text-align: center;
+        background: #ddd; 
+    }
     .footer a{
         display: block;
         color: rgb(37, 11, 235);
