--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {
 
 <div class="navbar">
   <a href="ThoTranResume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
-  <a href="#">Projects</a>
+  <a href="projects.html">Projects</a>
   <a href="#">Coursework</a>
   <a href="https://github.com/thotranexe" target="_blank" rel="noreferrer noopener">Github</a>
   <a href="socials.html" class="right">Socials</a>
