project page under construction

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,7 @@ body, html {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  border-style: dotted ;
 }
 
 hr {
@@ -46,15 +47,14 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>Logo</p>
+    <p>Tho Tran</p>
   </div>
   <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-    <p>35 days left</p>
+    <h1>UNDER CONSTRCUTION</h1>
+    <p>Sorry! Please come back later!</p>
   </div>
   <div class="bottomleft">
-    <p>Some text</p>
+    <a href="index.html">Back to saftey</a>
   </div>
 </div>
 
