project page under construction

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@ body, html {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%);
   text-align: center;
   border-style: dotted ;
 }
