project page under construction

--- a/projects.html
+++ b/projects.html
@@ -31,9 +31,9 @@ body, html {
 
 .middle {
   position: absolute;
-  top: 50%;
+  top: 0%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%,50%);
   text-align: center;
   border-style: dotted ;
 }
