--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,12 @@ body, html {
   bottom: 0;
   left: 16px;
 }
+.bottomleft a{
+  float: left;
+  display: block;
+  color: white;
+  text-decoration: none;
+}
 
 .middle {
   position: absolute;
