updating front page

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@ body {
     <div class="fakeimg" style="height:60px;">Image</div>
   </div>
   <div class="main">
-    <h2>Work Experience</h2>
-    <h5>Seasonal Worker, August 2022- Current</h5>
+    <h2>Jersey City Public Saftey</h2>
+    <h5>Seasonal Worker, August 2022 - Current</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <p>[caption]</p>
+    <p> Currently assisting in maintaining network security, diagnosing and solving vital hardware issues, and directing/instructing other employees on proper security protcols and procedures.</p>
     <br>
-    <h2>TITLE HEADING</h2>
+    <h2>[Place Holder]</h2>
     <h5>Title description, Sep 2, 2017</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
