updating side bar info

--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@ body {
     <h2>About Me</h2>
     <h5>Photo of me:</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Born and raised in Jersey City, NJ
-        <br>Vietnamese
-        <br>Graduating May 2023 from N.J.I.T
+    <p>I was born and raised in Jersey City, NJ
+        <br>I am Vietnamese-American
+        <br>I will be graduating May 2023 from N.J.I.T
     </p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
+    <h3>Fun Facts</h3>
+    <p> I have both a cat and a dog
+    </p>
     <div class="fakeimg" style="height:60px;">Image</div><br>
     <div class="fakeimg" style="height:60px;">Image</div><br>
     <div class="fakeimg" style="height:60px;">Image</div>
