--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@ body {
 
 <div class="row">
   <div class="main">
+    <div class ="Header">
+      <h1>About Me</h1>
+      <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
+    </div>
+    <div class ="Header">
+      <h1>Experience</h1>
+    </div>
     <h2>Jersey City Public Saftey</h2>
     <h5>Seasonal Worker, August 2022 - Current</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>[caption]</p>
+    <div class="fakeimg" style="height:200px; width:200px;">Icon</div>
     <p> Currently assisting in maintaining network security, diagnosing and solving vital hardware issues, and directing/instructing other employees on proper security protcols and procedures.</p>
-    <br>
-    <h2>[Place Holder]</h2>
-    <h5>Title description, Sep 2, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
   </div>
 </div>
 
