--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ body {
   font-size: 40px;
 }
 
+.main h1{
+  text-align: center;
+}
+
 /* Style the top navigation bar */
 .navbar {
   font-family: Arial, Helvetica, sans-serif;
@@ -123,12 +127,11 @@ body {
   <a href="socials.html" class="right">Socials</a>
 </div>
 
-<div class="row">
-  <div class="main">
+<div class="main">
     <div class ="Header">
       <h1>About Me</h1>
-      <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
     </div>
+    <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
     <div class ="Header">
       <h1>Experience</h1>
     </div>
@@ -136,7 +139,6 @@ body {
     <h5>Seasonal Worker, August 2022 - Current</h5>
     <div class="fakeimg" style="height:200px; width:200px;">Icon</div>
     <p> Currently assisting in maintaining network security, diagnosing and solving vital hardware issues, and directing/instructing other employees on proper security protcols and procedures.</p>
-  </div>
 </div>
 
 <div class="footer">
