--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 * {
   box-sizing: border-box;
 }
-@font-face { font-family: monocraft; src: url('Monocraft.TTF'); }
+@font-face { 
+  font-family: monocraft; 
+  src: url('Monocraft.TTF') format('truetype'); }
 .flex-container {
     display: flex;
     flex-direction: row;
