--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
+@font-face { 
+  font-family: monocraft; 
+  src: url('Monocraft.TTF') format('truetype'); 
+}
+
 * {
   box-sizing: border-box;
 }
-@font-face { 
-  font-family: monocraft; 
-  src: url('Monocraft.TTF') format('truetype'); }
+
 .flex-container {
     display: flex;
     flex-direction: row;
@@ -84,15 +88,7 @@ body {
 }
 
 /* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  -ms-flex: 30%; /* IE10 */
-  flex: 30%;
-  color: whitesmoke;
-  background-color: rgb(68, 67, 67);
-  padding: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 .main {   
     -ms-flex: 70%; /* IE10 */
     flex: 70%;
