playing with fonts

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
-@font-face { 
-  font-family: monocraft; 
-  src: url('Monocraft.TTF') format('truetype'); 
-}
-
 * {
   box-sizing: border-box;
 }
@@ -94,7 +89,7 @@ body {
     flex: 70%;
     color:whitesmoke;
     background-color: rgb(33, 33, 33);
-    font-family: monocraft;
+    font-family: alegreya;
     padding: 20px;
 }
 
