playing with fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
+@font-face { 
+  font-family: alegreya; 
+  src: url('AlegreyaSans-Regular.ttf') format('truetype'); 
+  font-style: normal;
+}
+@font-face {
+  font-family: exo;
+  src: url('Exo2-VariableFont_wght.ttf') format('truetype');
+}
+
 * {
   box-sizing: border-box;
 }
