bug fixing text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Tho Tran Homepage</title>
 <link rel="stylesheet" type="text/css" href="styles.scss"/>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -31,10 +32,10 @@
 } 
 
 /* Style the body */
-body {
+/*body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-}
+}*/
 
 /* Increase the font size of the heading */
 .header h1 {
