bug fixing text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }*/
-
+.header{
+  font-family: Exo;
+}
+.bg{
+  font-family: Exo;
+}
+.bg p{
+  font-family: Exo;
+}
 /* Increase the font size of the heading */
 .header h1 {
   text-align: center;
