--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
    /* border: 2px solid seagreen;*/
 } 
 
-/* Style the body */
-/*body {
-  font-family: Arial, Helvetica, sans-serif;
+
+*body {
+  /*font-family: Arial, Helvetica, sans-serif;*/
   margin: 0;
-}*/
+}
 .header{
   font-family: Exo;
 }
