--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body {
 }
 .bg p{
   font-family: Exo;
+  font-size: 20px;
 }
 /* Increase the font size of the heading */
 .header h1 {
@@ -102,6 +103,9 @@ body {
     font-family: alegreya;
     padding: 20px;
     margin: auto;
+}
+.main p{
+  font-size: 15px;
 }
 
 .footer {
