--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 .flex-child {
     flex: 2;
-    /*border: 2px solid yellow;*/
     margin-right: 50px;
     margin-left: 50px;
 }  
@@ -40,10 +39,13 @@
 
 .flex2-child {
     flex: 1;
-    /*border: 2px solid yellow;*/
+    flex-shrink: 1;
     margin-right: 50px;
     margin-left: 50px;
 }  
+.flex2-child img{
+  border-radius: 100px;
+}
 
 body {
   /*font-family: Arial, Helvetica, sans-serif;*/
@@ -132,7 +134,7 @@ body {
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 925px) {
   .flex-container {   
     flex-direction: column;
     align-items: center;
@@ -155,8 +157,7 @@ body {
     flex-shrink: 0;
   }
   .flex2-child{
-    align-self: center;
-    margin-right: auto;
+    margin-right: 5vh;
   }
 }
 
