--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     margin-right: 50px;
     margin-left: 50px;
 }  
+.flex2-child li{
+  justify-content: center;
+}
 .flex2-child img{
   border-radius: 100px;
 }
@@ -220,6 +223,39 @@ body {
         <h2>Web banking app</h2>
         <a href="wip.html"><img src="bank.png" height="200px" width="200px"></img></a>
       </div>  
+    </div>
+    <div class ="Header">
+      <h1>Skills</h1>
+    </div>
+    <div class= "flex2-container">
+      <div class="flex2-child">
+        <h2>Webdev</h2>
+        <li>HTML</li>
+        <li>PHP</li>
+        <li>CSS</li>
+      </div>
+      <div class="flex2-child">
+        <h2>Backend</h2>
+        <li>Python</li>
+        <li>Java</li>
+        <li>C/C++</li>
+      </div>
+      <div class="flex2-child">
+        <h2>Databases</h2>
+        <li>SQL</li>
+        <li>NoSQL</li>
+      </div>
+      <div class="flex2-child">
+        <h2>Mobile</h2>
+        <li>SDK</li>
+        <li>Kotlin</li>
+      </div>
+      <div class="flex2-child">
+        <h2>Operating Systems</h2>
+        <li>Linux</li>
+        <li>Unix(macOS)</li>
+        <li>Windows</li>
+      </div>
     </div>
 </div>
 
