--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ body {
     flex-shrink: 0;
   }
   .flex-child{
+    margin-left: auto;
     margin-right: auto;
   }
   .flex-child:first-child{
