somwhat final adjustments to index

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {
     -ms-flex: 70%; /* IE10 */
     flex: 70%;
     color:whitesmoke;
-    background-color: rgb(33, 33, 33);
+    background-color:  #202124;
     font-family: alegreya;
     padding: 20px;
     margin: auto;
@@ -133,7 +133,9 @@ body {
 .footer {
         padding: 20px;
         text-align: center;
-        background: #ddd; 
+        color: #ddd;
+        font-family: Exo;
+        background: #182136; 
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -144,8 +146,8 @@ body {
     flex-shrink: 0;
   }
   .flex-child{
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .flex-child:first-child{
     margin-left: auto;
@@ -186,7 +188,6 @@ body {
 <div class="navbar">
   <a href="ThoTranResume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
   <a href="wip.html">Projects</a>
-  <a href="wip.html">Coursework</a>
   <a href="https://github.com/thotranexe" target="_blank" rel="noreferrer noopener">Github</a>
   <a href="socials.html" class="right">Socials</a>
 </div>
@@ -261,7 +262,9 @@ body {
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>Contact Me!</h2>
+  <br>thotranexe@gmail | tvt4@njit.edu</br>
+  <br>201-744-0153</br>
 </div>
 
 </body>
