--- a/socials.html
+++ b/socials.html
@@ -3,6 +3,7 @@
 <head>
 <title>Socials Page</title>
 <link rel="stylesheet" type="text/css" href="styles.scss"/>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -10,7 +11,7 @@
      box-sizing: border-box;
     }
     body {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: exo;
         margin: 0;
     }
     .main {
@@ -20,7 +21,7 @@
         text-align: center;
         color:whitesmoke;
         background-color: rgb(33, 33, 33);
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: alegreya;
         padding: 20px;
     }
     .main a{
@@ -57,8 +58,7 @@
 <div class="main">
     <a href="#" style="text-decoration:none;">Twitter<br></a>
     <a href="#" style="text-decoration:none;">Instagram<br></a>
-    <a href="#" style="text-decoration:none;">Youtube<br></a>
-    <a href="#" style="text-decoration:none;">Linkedin<br></a>
+    <a href="https://www.linkedin.com/in/tho-tran-049044263/" style="text-decoration:none;">Linkedin<br></a>
     <a href="#" style="text-decoration:none;">Discord<br></a>
 </div>
 <div class="footer">
