--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ body {
 
 <div class="navbar">
   <a href="ThoTranResume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
-  <a href="projects.html" target="_blank" rel="noreferrer noopener">Projects</a>
+  <a href="projects.html">Projects</a>
   <a href="https://github.com/thotranexe" target="_blank" rel="noreferrer noopener">Github</a>
   <a href="socials.html" class="right">Socials</a>
 </div>
