--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,7 @@
             to create an email validater with the caveat of mimicking turing machine. 
         </p>
         </div>
+    </div>    
     <h1>Data analysis</h1>
     <div class="flex-container">
         <div class="flex-child">
@@ -157,6 +158,7 @@
             tell the user wether or not their wine would be of high quality based on the inputted characteristics 
         </p>
         </div>
+    </div>
 </div>
 <div class="footer">
     <a href="index.html"> Back to Homepage <a>
