--- a/projects.html
+++ b/projects.html
@@ -7,19 +7,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-    @media screen and (max-width: 925px) {
-    .flex-container {   
-        flex-direction: column;
-        align-items: center;
-        flex-shrink: 0;
-        }
-        .flex-child{
-        margin-left: 20px;
-        margin-right: 20px;
-        }
-    }
     * {
      box-sizing: border-box;
+    }
+    @media screen and (max-width: 925px) {
+        .flex-container {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .flex-child {
+            flex: 2;
+            margin-right: 50px;
+            margin-left: 50px;
+        }
     }
     .flex-container {
         display: flex;
