--- a/socials.html
+++ b/socials.html
@@ -38,7 +38,7 @@
     }
     .footer a{
         display: block;
-        color: whitesmoke
+        color: whitesmoke;
         padding: 20px 20px;
         font-size: 20px;
         text-decoration: none;
