--- a/projects.html
+++ b/projects.html
@@ -53,11 +53,11 @@
     .footer {
         padding: 20px;
         text-align: center;
-        background: #ddd; 
+        background: #182136;
     }
     .footer a{
         display: block;
-        color: rgb(37, 11, 235);
+        color: whitesmoke;
         padding: 20px 20px;
         font-size: 20px;
         text-decoration: none;
