--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@ body {
 /* Style the navigation bar links */
 .navbar a {
   float: left;
-  display: block;
   color: white;
   text-align: center;
   padding: 14px 20px;
@@ -180,7 +179,7 @@ body {
 <body>
 
 <div class="bg">
-    <div class="header">
+    <div class="banner">
     <h1>Tho Tran</h1>
     <p>Bachelors In Computer Science | Software Engineer</p>
     </div>
