--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@ body {
 .header{
   font-family: Exo;
 }
-
+.bg{
+  height: 60vh;
+  font-family: Exo;
+}
 .bg p{
   font-family: Exo;
   font-size: 20px;
