increased banner size

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ body {
 <body>
 
 <div class="bg">
-    <div class="banner">
+    <div class="header">
     <h1>Tho Tran</h1>
     <p>Bachelors In Computer Science | Software Engineer</p>
     </div>
