--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Tho Tran Homepage</title>
-<link rel="stylesheet" type="text/css" href="styles.scss"/>
+<link rel="stylesheet" type="text/scss" href="styles.scss"/>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
