--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ body {
 
 <div class="bg">
     <div class="header">
-    <h1>Tho Tran</h1>
-    <p>Bachelors In Computer Science | Software Engineer</p>
+    <h1>&lt;Tho Tran&gt;</h1>
+    <p>Software Engineer</p>
     </div>
 </div>
 
