--- a/index.html
+++ b/index.html
@@ -54,30 +54,14 @@ body {
   /*font-family: Arial, Helvetica, sans-serif;*/
   margin: 0;
 }
-.header{
-  font-family: Exo;
-}
+
 .bg{
-  height: 60vh;
-  font-family: Exo;
+    height: 60vh;
+    font-family: space;
 }
 .bg p{
-  font-family: Exo;
-  font-size: 20px;
-}
-/* Increase the font size of the heading */
-.header h1 {
-  text-align: center;
-  font-size: 40px;
-}
-
-.header p{
-  text-align: center;
-}
-
-.main h1{
-  text-align: center;
-  font-family: exo;
+    font-family: space;
+    font-size: 20px;
 }
 
 /* Style the top navigation bar */
