--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ body {
 .navbar {
   font-family: exo;
   overflow: hidden;
-  display: inline-block;
+  display: flex;
+  background: rgb(0,0,0,0);
 }
 
 /* Style the navigation bar links */
