--- a/index.html
+++ b/index.html
@@ -71,25 +71,19 @@ body {
   display: flex;
   background: rgb(0,0,0,0.1);
 }
-
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-/* Right-aligned link */
-.navbar a.right {
+.contactbtn {
   float: right;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color:transparent;
+  border: 2px whitesmoke;
+  color: whitesmoke;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+  font-family: space;
 }
 /* Create two unequal columns that sits next to each other */
 
@@ -153,12 +147,7 @@ body {
 </head>
 <body>
 
-<div class="navbar">
-  <a href="ThoTranResume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>
-  <a href="projects.html">Projects</a>
-  <a href="https://github.com/thotranexe" target="_blank" rel="noreferrer noopener">Github</a>
-  <a href="socials.html" class="right">Socials</a>
-</div>
+<button class="contactbtn"> Get In Touch</button>
 
 <div class="bg">
     <div class="header">
