--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 16px;
