--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@ body {
   background: rgb(0,0,0,0.1);
 }
 .contactbtn {
-  float: right;
   background-color:transparent;
-  border: 2px whitesmoke;
+  border:2px solid whitesmoke;
   color: whitesmoke;
   padding: 10px 20px;
   text-align: center;
