--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ body {
   background: rgb(0,0,0,0.1);
 }
 .contactbtn {
+  position: absolute;
+  top: 0px;
+  right: 0px;
   background-color:transparent;
   border:2px solid whitesmoke;
   color: whitesmoke;
