--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@ body {
 }
 .contactbtn {
   position: absolute;
-  top: 0px;
-  right: 0px;
-  background-color:transparent;
+  top: 5px;
+  right: 2px;
+  background-color:whitesmoke;
   border:2px solid whitesmoke;
-  color: whitesmoke;
+  color: transparent;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
