--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
   right: 2px;
   background-color:whitesmoke;
   border:2px solid whitesmoke;
-  color: transparent;
+  color: rgba(0, 0, 0, .5);
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
