--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ body {
   right: 2px;
   background-color:whitesmoke;
   border:2px solid whitesmoke;
-  color: rgba(0, 0, 0, .5);
+  color: black;
+  mix-blend-mode: screen;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
