--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
   position: absolute;
   top: 5px;
   right: 2px;
-  background-color:whitesmoke;
+  background-color:green;
   border:2px solid whitesmoke;
   color: black;
   mix-blend-mode: screen;
