--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@ body {
   position: absolute;
   top: 5px;
   right: 2px;
-  background-color:green;
-  border:2px solid whitesmoke;
+  background-color:rgb(53, 255, 53);
+  border:2px solid rgb(53, 255, 53);
   color: black;
-  mix-blend-mode: screen;
+  mix-blend-mode: color-dodge;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -93,7 +93,7 @@ body {
 .main {   
     -ms-flex: 70%; /* IE10 */
     flex: 70%;
-    color:whitesmoke;
+    color:rgb(53, 255, 53);
     background-color:  #202124;
     padding: 20px;
     margin: auto;
