--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@ body {
   background-color:rgb(53, 255, 53);
   border:2px solid rgb(53, 255, 53);
   color: black;
-  mix-blend-mode: color-dodge;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -87,6 +86,9 @@ body {
   cursor: pointer;
   border-radius: 16px;
   font-family: space;
+}
+.span{
+  mix-blend-mode: screen;
 }
 /* Create two unequal columns that sits next to each other */
 
@@ -153,7 +155,7 @@ body {
 
 
 <div class="bg">
-  <button class="contactbtn"> Get In Touch</button>
+  <button class="contactbtn"><span>Get In Touch</span></button>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
     <p>Software Engineer</p>
