--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
   right: 2px;
   background-color:rgb(53, 255, 53);
   border:2px solid rgb(53, 255, 53);
-  color: black;
+  /*color: black;*/
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -88,6 +88,8 @@ body {
   font-family: space;
 }
 .span{
+  background-color: white;
+  color: black;
   mix-blend-mode: screen;
 }
 /* Create two unequal columns that sits next to each other */
