--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
   border-radius: 16px;
   font-family: space;
 }
-.span{
+.contactbtn span{
   background-color: white;
   color: black;
   mix-blend-mode: screen;
