--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ body {
   right: 2px;
   background-color:rgb(53, 255, 53);
   border:2px solid rgb(53, 255, 53);
-  /*color: black;*/
+  color: white;
+  mix-blend-mode: multiply;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -87,11 +88,7 @@ body {
   border-radius: 16px;
   font-family: space;
 }
-.contactbtn span{
-  background-color: white;
-  color: black;
-  mix-blend-mode: screen;
-}
+
 /* Create two unequal columns that sits next to each other */
 
 .main {   
@@ -157,7 +154,7 @@ body {
 
 
 <div class="bg">
-  <button class="contactbtn"><span>Get In Touch</span></button>
+  <button class="contactbtn">Get In Touch</button>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
     <p>Software Engineer</p>
