--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
   right: 2px;
   background-color:rgb(53, 255, 53);
   border:2px solid rgb(53, 255, 53);
-  color: white;
+  color: black;
   mix-blend-mode: multiply;
   padding: 10px 20px;
   text-align: center;
