--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@ body {
   border-radius: 16px;
   font-family: space;
 }
-
+.contactbtn span{
+  font-family: space;
+  mix-blend-mode: screen;
+}
 /* Create two unequal columns that sits next to each other */
 
 .main {   
@@ -153,7 +156,7 @@ body {
 
 
 <div class="bg">
-  <button class="contactbtn">Get In Touch</button>
+  <button class="contactbtn"><span>Get In Touch</span></button>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
     <p>Software Engineer</p>
