--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ body {
 }
 .contactbtn span{
   font-family: space;
+  background-color: transparent;
   color: white;
   mix-blend-mode: screen;
 }
