--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {
 }
 .contactbtn span{
   font-family: space;
-  background-color: transparent;
+  background-color: black;
   color: white;
   mix-blend-mode: screen;
 }
