--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body {
   font-family: space;
   background-color: black;
   color: white;
-  mix-blend-mode: screen;
+  mix-blend-mode: multiply;
 }
 /* Create two unequal columns that sits next to each other */
 
