--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@ body {
   border-radius: 16px;
   font-family: space;
 }
-.contactbtn span{
-  font-family: space;
-  background-color: black;
-  color: white;
-  mix-blend-mode: multiply;
-}
+
 /* Create two unequal columns that sits next to each other */
 
 .main {   
@@ -158,7 +153,7 @@ body {
 
 
 <div class="bg">
-  <button class="contactbtn"><span>Get In Touch</span></button>
+  <button class="contactbtn">Get In Touch</button>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
     <p>Software Engineer</p>
